--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   overflow-x: hidden;
   overflow-y: hidden;
+  background: #efefef;
 }
 
 a {
